=== Desk Mess Mirrored ===
== Version 2.0.3 ==
Changelog: May 24, 2012
= Code =
* Refactor `dmm_wp_title` to more correctly use filter while maintaining backward-compatibility
* Added conditional check for custom post types

= CSS =
* Adjusted #content left margin
* Adjusted menu link padding
* Corrected issue with comments meta showing list bullet
* Removed `table` element properties
* Replaced deprecated `get_theme_data`
* Replaced deprecated `add_custom_background`

= Internet Browsers Reviewed =
* Apple Safari v5.1.2 -x
* Firefox v10.0.1 -x
* Google Chrome v17.0 -x
* Internet Explorer v9.0 -x
* Opera v11.61 -x

/** ------------------------------------------------------------------------- */

== Version 2.0.2 ==
Changelog: March 1, 2012
= Code =
* Un-wrapped the `register_nav_menu` call

= Miscellaneous =
* Added additional screenshots
* Updated 'readme.txt' with a Screenshot section and relevant descriptions

/** ------------------------------------------------------------------------- */

== Version 2.0.1 ==
Changelog: February 15, 2012
= Code =
* Fixed display issue when widget title was empty - see `dmm_widget_title`

= CSS =
* Added z-index to "cup" to keep it on top of "sticky notes"
* Adjusted `#logo h2` element text position higher for better cross-browser compatibility

= Miscellaneous =
* Updated 'readme.txt' with a "Licensing" section
* Updated 'readme.txt' explaining the relevance and possible usage of the 'Page Link' shortlink found on pages.

/** ------------------------------------------------------------------------- */

== Version 2.0 ==
Changelog: January 9, 2012
= Code =
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each template file as relevant
* Added 'desk-mess-mirrored' loop template